# Copyright 2010 University Corporation for Atmospheric Research
#
# This file is part of the LDM package.  See the file COPYRIGHT
# in the top-level source-directory of the package for copying and
# redistribution conditions.
#
## Process this file with automake to produce Makefile.in

bin_PROGRAMS		= hupsyslog
hupsyslog_LDADD		= \
  $(top_builddir)/lib/libldm.la \
  $(top_builddir)/libxml2/libxml2.la \
  -lm
