# Copyright 2014 University Corporation for Atmospheric Research
#
# This file is part of the Unidata LDM package.  See the file COPYRIGHT in
# the top-level source-directory of the package for copying and redistribution
# conditions.
#
# Process this file with automake(1) to produce file Makefile.in

SUBDIRS			= C C++ FMTP-LDM7/UnidataFMTP
noinst_LTLIBRARIES	= lib.la
lib_la_SOURCES		=
lib_la_LIBADD		= C/lib.la C++/lib.la FMTP-LDM7/UnidataFMTP/libfmtp.la
