# Copyright 2014 University Corporation for Atmospheric Research
#
# This file is part of the Unidata LDM package.  See the file COPYRIGHT in
# the top-level source-directory of the package for copying and redistribution
# conditions.
#
# Process this file with automake(1) to produce file Makefile.in

SUBDIRS			= ldm7 FMTP-LDM7/UnidataFMTP OESS-Client
noinst_LTLIBRARIES	= lib.la
lib_la_SOURCES		=
lib_la_LIBADD		= ldm7/lib.la FMTP-LDM7/UnidataFMTP/libfmtp.la
